# cuda-kernels

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CUDAConfig.cmake
common/: CMakeLists.txt
common/include/: benchmark.h  cuda_config.h  cuda_utils.h  device_utils.cuh  test_harness.h  test_utils.h
common/src/: benchmark.cu  cuda_utils.cu  test_utils.cu
problems/: CMakeLists.txt
problems/dot-product/: CMakeLists.txt  README-cn.md  README.md  dot_product.cu  dot_product.cuh  main.cu  tests.cu
problems/gemm/: CMakeLists.txt  gemm.cu  gemm.cuh  main.cu  tests.cu
problems/transpose/: CMakeLists.txt  README.md  main.cu  tests.cu  transpose.cu  transpose.cuh
scripts/: analyze_benchmark.py
